--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
-div{
-    color: antiquewhite;
-    width: 50vw;
-    height: 50vh;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.header01{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px;
+    background-color: lightgray;
+    padding: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    font-size: 24px;
+    text-align: center;
+    justify-items: center;
+    align-items: center;
+    place-items: center;
+    font-weight: bold;
+    color: white;
+    transition: background-color 0.5s ease;
+    cursor: pointer;
+    position: sticky;
+    
 }
