--- a/style.css
+++ b/style.css
@@ -4,13 +4,19 @@
     text-decoration: none;
     box-sizing: border-box;
 }
+
+
 body{
     background-color: rgb(177, 182, 186);
 }
+
+/*------------------ header and sidebar css -----------------------------*/
+
 .header01{
     width: 100vw;
     height: 80px;
     display: flex;
+    position: fixed;
     align-items: center;
     justify-content: space-between;
     padding:0 2vw;
@@ -19,8 +25,24 @@ body{
 }
 .mainlogo{
     width: 30vw;
+    height: 50px;
     color: rgb(22, 25, 28);
     font-size: medium;
+    display: flex;
+}
+.logoimage{
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    border: 3px solid black;
+}
+.logotext{
+    align-self: center;
+    font-weight: bold;
+    padding-left: 5px;
+
 }
 
 #check{
@@ -80,7 +102,6 @@ body{
         height: 100vh;
         transition: all 0.5s;
         background: rgb(102, 121, 115);
-        opacity: 0.7;
         justify-content: start;
         text-align: center;
         margin-top: 10px;
@@ -114,9 +135,26 @@ body{
         display: block;
         padding-right: 20px;
     }
-    
+}
 
+/*------------------------ main containte ------------------------- */
+
+.b-g-img{
+    width: 100vw;
+    height: 100vh;
     
+    background-position: center;
+}
+
+.aboutsection{
+    width: 100vw;
+    height: 100vh;
+    background-image: url("./image/b-gimage.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    z-index: 1;
+    background-position: center;
 }
 
 
