--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 
 /*------------------ header and sidebar css -----------------------------*/
 
-.header01{
+#header01{
     width: 100vw;
     height: 80px;
     display: flex;
@@ -20,14 +20,13 @@ body{
     align-items: center;
     justify-content: space-between;
     padding:0 2vw;
-    background-color: #4e4c4eab; 
     
 }
 .mainlogo{
     width: 30vw;
     height: 50px;
     color: rgb(255, 255, 255);
-    font-size: medium;
+    font-size: 30px;
     display: flex;
 }
 .logoimage{
@@ -70,13 +69,13 @@ body{
 }
 
 .nav-a{
-    color: rgb(255, 255, 255);
+    color: rgb(81, 81, 184);
     font-size: 20px;
     text-transform: uppercase;
 }
 
 .nav-a:hover{
-    color: rgb(225, 97, 245);
+    color: #25195a54;
     text-decoration: underline;
 }
 
@@ -88,9 +87,9 @@ body{
         gap: 3vw;
     }
     .mainlogo{
-        font-size: small;
+        font-size: 20px;
     }
-    .header01{
+    #header01{
         height: 60px;
     }
     .nav-a{
@@ -109,7 +108,7 @@ body{
         width: 40vw;
         height: 100vh;
         transition: all 0.5s;
-        background: #4e4c4eab;
+        background: #0000ff78;
         justify-content: start;
         align-items: center;
         text-align: center;
@@ -130,7 +129,7 @@ body{
         margin: 20px 0;
     }
     .navlistitem:hover{
-        background-color: #92869254;   
+        background-color: #25195a54;   
     }
     
 
@@ -160,7 +159,6 @@ body{
 }
 
 .aboutsection{
-    width: 100vw;
     height: 100vh;
     background-image: url("./image/b-gimage.png");
     background-size: cover;
@@ -180,7 +178,7 @@ body{
     padding-left: 5%;
 }
 .changingtext{
-    color: rgb(225, 97, 245);
+    color: rgb(0, 0, 245);
 }
 .blinkingcursor{
     color: rgb(0, 0, 0);
@@ -200,6 +198,55 @@ body{
     }
 }
 
+.aboutme{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    color: white;
+}
 
+.about-hp{
+    color: black;
+    width: 90%;
+    height: 20%;
+    margin:  10px auto;
+}
+.about-h{
+    font-size: 30px;
+    font-weight: bolder;
+    padding: 10px;
+    padding-left: 0;
+}
 
+.aboutimginfo{
+    width: 100%;
+    height: 65vh;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: 0.7fr 1.3fr 1fr;
+    justify-content: center;
+}
+
+.aboutimg{
+    width: 100%;
+    margin: auto;
+    grid-row: 1/3;
+}
+
+.infofirst{
+    grid-column: 2/4;
+    color: black;
+    padding: 10px;
+}
+
+.infosec{
+    background-color: aquamarine;
+}
+
+.infosec-three{
+    grid-column: 2/4;
+    color: black;
+    padding: 10px 0;
+}
 
