--- a/style.css
+++ b/style.css
@@ -229,19 +229,47 @@ body{
 }
 
 .aboutimg{
-    width: 100%;
+    width: auto;
+    max-height: fit-content;
     margin: auto;
     grid-row: 1/3;
+    border-radius: 20px;
+}
+.proimage{
+    width: 100%;
+    height: auto;
+    border-radius: 1%;
+    
 }
 
 .infofirst{
     grid-column: 2/4;
     color: black;
-    padding: 10px;
+    padding-left: 10px;
 }
 
 .infosec{
     background-color: aquamarine;
+}
+.infosec-one{
+    grid-column: 2/4;
+}
+.infosec-list{
+    padding-left: 20px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    row-gap: 30px;
+}
+.infolist-item{
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+}
+.infoitem-ans{
+    color: black;
+    padding-left: 10px;
+    font-size: 18px;
+    font-weight: lighter;
 }
 
 .infosec-three{
