--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 
 body{
-    background-color: rgb(177, 182, 186);
+    background-color: rgb(255, 255, 255);
 }
 
 /*------------------ header and sidebar css -----------------------------*/
@@ -69,7 +69,7 @@ body{
 }
 
 .nav-a{
-    color: rgb(81, 81, 184);
+    color: rgb(76, 76, 255);
     font-size: 20px;
     text-transform: uppercase;
 }
@@ -108,7 +108,7 @@ body{
         width: 40vw;
         height: 100vh;
         transition: all 0.5s;
-        background: #0000ff78;
+        background: rgb(76, 76, 255);
         justify-content: start;
         align-items: center;
         text-align: center;
@@ -178,7 +178,7 @@ body{
     padding-left: 5%;
 }
 .changingtext{
-    color: rgb(0, 0, 245);
+    color: rgb(76, 76, 255);
 }
 .blinkingcursor{
     color: rgb(0, 0, 0);
@@ -200,7 +200,7 @@ body{
 
 .aboutme{
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: rgb(255, 255, 255);
     padding: 20px;
     color: white;
@@ -217,50 +217,78 @@ body{
     font-weight: bolder;
     padding: 10px;
     padding-left: 0;
+    border-bottom: 2px solid rgb(76, 76, 255);
+}
+.about-p{
+    font-size: 18px;
+    padding-top: 10px;
 }
 
 .aboutimginfo{
-    width: 100%;
-    height: 65vh;
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
-    grid-template-rows: 0.7fr 1.3fr 1fr;
+    width: 90%;
+    margin: auto;
+    display: flex;
     justify-content: center;
+}
+    
+
+.aboutimginfo01{
+    width: 35%;
+    height: 400px;
 }
 
 .aboutimg{
-    width: auto;
-    max-height: fit-content;
-    margin: auto;
-    grid-row: 1/3;
-    border-radius: 20px;
+    width: 300px;
+    margin: 0px auto;
 }
 .proimage{
     width: 100%;
-    height: auto;
     border-radius: 1%;
     
 }
 
+.infoicon-div{
+    height: 70px;
+}
+.infosec-icon{
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.infoicon{
+    margin-left: 15px;
+}
+.infoicon:hover{
+    border-bottom: 2px solid #161b13;
+}
+.infoicon01{
+    margin-left: 20px;
+}
+
+.aboutimginfo02{
+    width: 65%;
+    height: 400px;
+}
+
 .infofirst{
-    grid-column: 2/4;
     color: black;
     padding-left: 10px;
 }
+.infofirst-p{
+    padding: 10px;
+}
 
-.infosec{
-    background-color: aquamarine;
-}
-.infosec-one{
-    grid-column: 2/4;
-}
+
 .infosec-list{
-    padding-left: 20px;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    row-gap: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 0px 30px 30px;
+    list-style-type: disclosure-closed;
 }
 .infolist-item{
+    width: 50%;
+    margin: 20px 0px;
     color: black;
     font-weight: bold;
     font-size: 20px;
@@ -272,9 +300,211 @@ body{
     font-weight: lighter;
 }
 
+
+
+
 .infosec-three{
-    grid-column: 2/4;
     color: black;
-    padding: 10px 0;
+    padding: 10px ;
 }
 
+@media screen and (max-width:1000px){
+    .about-hp{
+        height: 40%;
+        transition-duration: 1.5s;
+    }
+    .aboutimginfo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transition-duration: 1.5s;
+
+    }
+    .aboutimginfo01{
+        width: 100%;
+        height: auto;
+        margin: 10px auto;
+        transition-duration: 1.5s;
+
+    }
+    .aboutimginfo02{
+        width: 80%;
+        height: auto;
+        margin: 10px auto;
+        transition-duration: 1.5s;
+    }
+    .aboutimg{
+        width: 50%;
+        transition-duration: 1.5s;
+    }
+    .infoicon{
+        margin-left:0px;
+        margin: 0px 4%;
+        transition-duration: 1.5s;
+    }
+
+    
+}
+
+@media screen and (max-width:800px){
+    .aboutimginfo02{
+        width: 100%;
+        height: auto;
+        margin: 10px auto;
+        transition-duration: 1s;
+    }
+    .infolist-item{
+        width: 100%;
+        font-size: 15px;
+        transition-duration: 1s;
+    }
+    .aboutimg{
+        width: 90%;
+        transition-duration: 1s;
+    }
+    
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section02{
+    width: 100%;
+    height: auto;
+    background-color: rgb(234, 236, 255);
+}
+
+.skillhead{
+    width: 80%;
+    color: black;
+    font-size: 30px;
+    margin: 0px auto;
+    padding-top: 50px;
+    border-bottom: 2px solid rgb(76, 76, 255);
+}
+.skillinfo{
+    width: 80%;
+    color: black;
+    font-size: 15px;
+    margin: 0px auto;
+    padding-top: 20px;
+}
+.skillitem{
+    width: 80%;
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.items-s{
+    width: 20vw;
+    height: 20vw;
+    margin: 20px 40px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    transition-duration:s;
+
+}
+
+@media screen and (mAX-width:1200PX){
+    .items-s{
+        width: 35vw;
+        height: 35vw;
+        margin: 10px 20px;
+        padding: 20px;
+        transition-duration: 1s;
+
+    }
+    
+}
+@media screen and (max-width:800px){
+    .items-s{
+        width: 75vw;
+        height: 75vw;
+        margin: auto;
+        margin-top: 30px;
+        padding-top: 40px;
+        transition-duration: 1s;
+    }
+
+}
+
+
+
+/* -------------------- */
+
+:root {
+    --circle-size: 100px;
+    --track-color: #e0e0e0;
+    --progress-color: #2196f3;
+    --text-color: #333;
+  }
+  .circle-container {
+    display: flex;
+    gap: 40px;
+  }
+  
+  .skill {
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .circle {
+    --angle: calc(var(--percentage) * 3.6deg);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    border-radius: 50%;
+    background: conic-gradient(
+      var(--progress-color) var(--angle),
+      var(--track-color) var(--angle)
+    );
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  
+  .inner-circle {
+    width: 80%;
+    height: 80%;
+    background: #fff;
+    border-radius: 50%;
+  }
+  
+  .skill p {
+    margin: 10px 0 5px;
+    color: var(--text-color);
+    font-size: 1rem;
+  }
+  
+  .skill span {
+    font-size: 0.9rem;
+    color: var(--text-color);
+  }
+
+  /* --------------------------------- */
+
+  .section03{
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+
+  }
