--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body{
         margin-top: 10px;
         color: black;
         justify-items: center;
+        z-index: 1;
 
     }
 
@@ -164,7 +165,6 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     object-fit: cover;
-    z-index: 1;
     background-position: center;
 }
 .changetext{
@@ -184,6 +184,7 @@ body{
     color: rgb(0, 0, 0);
     animation: blink 0.7s infinite;
     color: rgb(255, 255, 255);
+    z-index: -1;
 }
 
 @keyframes blink{
@@ -367,18 +368,6 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 .section02{
     width: 100%;
     height: auto;
@@ -386,7 +375,7 @@ body{
 }
 
 .skillhead{
-    width: 80%;
+    width: 80vw;
     color: black;
     font-size: 30px;
     margin: 0px auto;
@@ -394,19 +383,20 @@ body{
     border-bottom: 2px solid rgb(76, 76, 255);
 }
 .skillinfo{
-    width: 80%;
+    width: 80vw;
     color: black;
     font-size: 15px;
     margin: 0px auto;
     padding-top: 20px;
 }
 .skillitem{
-    width: 80%;
+    width: 80vw;
     margin: 10px auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 20px 0px;
 }
 
 .items-s{
@@ -416,22 +406,87 @@ body{
     padding: 20px;
     background-color: white;
     border-radius: 5px;
-    transition-duration:s;
-
+    transition-duration:1s;
 }
 
-@media screen and (mAX-width:1200PX){
+.skillmeter{
+    width: 70%;
+    height: 70%;
+    margin: 5px auto;
+
+}
+.circle{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-image: conic-gradient(
+        rgb(76, 76, 255) 0%, rgb(76, 76, 255) var(--percentage),
+        white var(--percentage), white 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-duration: 1S;
+    
+}
+
+.innercircle{
+    height: 85%;
+    width: 85%;
+    border-radius: 50%;
+    background-color: #ffffff;
+}
+
+
+
+.skillmeter p {
+    text-align: center;
+    font-size: 20px;
+}
+.skill-m-p1{
+    margin-top: 5px;
+}
+
+.skill-m-p2{
+    margin-bottom: 5px;
+}
+
+@media screen and (mAX-width:1420PX){
     .items-s{
-        width: 35vw;
-        height: 35vw;
+        width: 18vw;
+        height: 18vw;
+        margin: 10px 20px;
+        padding: 20px;
+        transition-duration: 1s;
+    }
+    .skillmeter p{
+        font-size: 14px;
+    }
+}
+
+@media screen and (mAX-width:1000PX){
+    .items-s{
+        width: 25vw;
+        height: 25vw;
         margin: 10px 20px;
         padding: 20px;
         transition-duration: 1s;
 
     }
+    .skillmeter p{
+        font-size: 15px;
+    }
     
 }
 @media screen and (max-width:800px){
+    
+    .skillmeter p{
+        font-size: 12px;
+    }
+}
+@media screen and (max-width:600px){
+    .skillmeter p{
+        font-size: 15px;
+    }
     .items-s{
         width: 75vw;
         height: 75vw;
@@ -440,71 +495,173 @@ body{
         padding-top: 40px;
         transition-duration: 1s;
     }
+}
+
+
+/* :root {
+    --circle-size: 100px;
+    --track-color: #e0e0e0;
+    --progress-color: #2196f3;
+    --text-color: #000000;
+    color: var(--text-color);
+    var(--progress-color)
+  } */
+
+.section03{
+    width: 100%;
+    height: auto;
+    background-color: white;
+    padding-bottom: 50px;
+
+}
+.contacthead{
+    width: 80%;
+    color: black;
+    font-size: 30px;
+    margin: 0px auto;
+    padding-top: 50px;
+    border-bottom: 2px solid rgb(76, 76, 255);
+}
+.contactinfo{
+    width: 80%;
+    color: black;
+    font-size: 15px;
+    margin: 0px auto;
+    padding-top: 20px;
+}
+
+.contactcard{
+    width: 80%;
+    height: auto;
+    margin: 20px auto;
+    background-color: white;
+    box-shadow: 0px 0px 12px 3px rgb(106, 110, 116);
+   
+}
+.contact-types{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
 }
 
 
-
-/* -------------------- */
-
-:root {
-    --circle-size: 100px;
-    --track-color: #e0e0e0;
-    --progress-color: #2196f3;
-    --text-color: #333;
-  }
-  .circle-container {
+.contacttype{
+    width: 30%;
+    height: 80px;
+    margin: 5px 10%;
     display: flex;
-    gap: 40px;
-  }
-  
-  .skill {
+    justify-content: start;
+    align-items: center;
+
+}
+
+.contacttype01{
+    margin-left: 20px;
+}
+.contacttype02{
+    margin-left: 20px;
+}
+.contacttype-p1{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.contacttype-p2{
+    font-size: 15px;
+}
+
+.contactlocation{
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
-    padding-top: 40px;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-  }
-  
-  .circle {
-    --angle: calc(var(--percentage) * 3.6deg);
-    width: var(--circle-size);
-    height: var(--circle-size);
-    border-radius: 50%;
-    background: conic-gradient(
-      var(--progress-color) var(--angle),
-      var(--track-color) var(--angle)
-    );
-    width: 60%;
+
+}
+.contacttypepin{
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-  }
-  
-  .inner-circle {
+    width: 100%;
+    text-align: center;
+    padding-left: 20px;
+
+}
+
+.contactmap{
     width: 80%;
-    height: 80%;
-    background: #fff;
-    border-radius: 50%;
-  }
-  
-  .skill p {
-    margin: 10px 0 5px;
-    color: var(--text-color);
-    font-size: 1rem;
-  }
-  
-  .skill span {
-    font-size: 0.9rem;
-    color: var(--text-color);
-  }
+    height: auto;
+    padding: 5px;
+    border-radius: 5px;
+}
+.contactmap iframe {
+    margin: 10px 10px;
+    width: 100%;
+    height: 30vw;
+    
+}
 
-  /* --------------------------------- */
+@media screen and (min-width:1400px){
+    .contactmap iframe {
+        height: 20vw;
 
-  .section03{
+    }
+    .contactmap{
+        width: 60%;
+    }
+    
+}
+@media screen and (max-width:800px){
+    .contactmap{
+        width: 100%;
+    }
+    .contactmap iframe {
+        height: 40vw;
+        margin: 0;
+    }
+    .contacttype{
+        width: 50%;
+        margin: 10px 0;
+    }
+    
+
+}
+@media screen and (max-width:650px){
+    .contactmap{
+        width: 100%;
+    }
+    .contactmap iframe {
+        height: 40vw;
+        margin: 0;
+    }
+    .contacttype{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 10px auto;
+    }
+    .contacttype{
+        justify-content: start;
+
+    }
+
+}
+.section04{
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: rgb(234, 236, 255);
+}
 
-  }
+.footer{
+    width: 100%;
+    height: 200px;
+    background-color: rgb(185, 192, 255);
+}
+
+
+
+
